--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
   <groupId>com.uae</groupId>
   <artifactId>SpringBootVEr</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
-  <packaging>jar</packaging>
+
+  <packaging>war</packaging>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -14,13 +14,34 @@
     <properties>
           <java.version>1.8</java.version>
     </properties>
+        <dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-dependencies</artifactId>
+            <version>Finchley.SR2</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+</dependencyManagement> 
 
      <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-       
+
+
+	 	<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency> 
+
     </dependencies>
      <build>
     <finalName>spring-bank-final</finalName>
@@ -32,4 +53,4 @@
             </plugin>
         </plugins>
     </build>
-</project>
+</project> 
